--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -69,13 +69,14 @@ span.navbar-text {
   transform: scale(1);
 }
 
-.social-icon a img {
+.social-icon a i {
   width: 40%;
   z-index: 1;
   transition: 0.3s ease-in-out;
+  color: #0d6efd;
 }
 
-.social-icon a:hover img {
+.social-icon a:hover i {
   filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%)
     hue-rotate(346deg) brightness(1);
 }
