--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -5,10 +5,12 @@
   margin-bottom: 24px;
   cursor: pointer;
   color: #fff;
+  height: 400px;
 }
 
 .proj-imgbx img {
   width: 100%;
+  object-fit: cover;
 }
 
 .proj-imgbx::before {
